--- a/package.json
+++ b/package.json
@@ -4,11 +4,21 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "axios": "^0.26.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
+    "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.29.0",
+    "react-icons": "^4.3.1",
+    "react-modal": "^3.14.4",
+    "react-pdf": "^5.7.2",
+    "react-player": "^2.10.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.7",
+    "sass": "^1.50.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
